--- a/frontend/authentication/login.html
+++ b/frontend/authentication/login.html
@@ -23,7 +23,7 @@
                     <input type="text" name="name" id="login-name" placeholder="Name" required>
                     <input type="password" name="password" id="login-password" placeholder="Password" required>
                     <button type="submit" id="login-btn">Login</button>
-                    <span>Don't have an account? <a href="./signup.html">Create one</a></span>
+                    <!-- <span>Don't have an account? <a href="./signup.html">Create one</a></span> -->
                 </div>
             </form>
         </div>
